<resources>
    <string name="app_name">Wassally</string>

    <!-- Strings related to login activity -->
    <string name="prompt_email">Username or Email </string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="new_to_wassaly">New to Wassally?</string>
    <string name="other_sign_in_methods">or Sign in using </string>
    <string name="forget_passowrd">forgot password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password must contain at least 8 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_error_message">Incorrect username or password </string>
    <string name="login_progress_message">Logging in .. please wait</string>


    <!--Strings related to sign up activity-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="privacy_note">By signing up you are agree to our Terms and Privacy policy</string>
    <string name="error_missing_first_name">enter your first name</string>
    <string name="error_missing_last_name">enter your last name</string>
    <string name="error_missing_email">enter a valid email address</string>
    <string name="error_missing_username">username is required</string>
    <string name="error_missing_password">password is required </string>
    <string name="sign_up_prgress_message">Signing up .. please wait</string>


    <!--my orders fragment strings-->
    <string name="your_orders_will_be_displayed_here">Your orders will be displayed here</string>
    <string name="get_started_by_creating_new_order">Get started by creating new order</string>
    <string name="state_waiting_caption">Your package is successfully created , we\'ll be in touch with you soon</string>
    <string name="state_pending_caption">Captain just took package from you , we\'ll inform you when he is ready to go</string>
    <string name="state_on_way_caption">Captain is ready to go  , he is on way</string>
    <string name="state_delivered_caption">Your package has been successfully delivered ,please give us your feed back </string>

    <!--navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ahmed Mohamed</string>
    <string name="nav_header_subtitle">Client</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--new order-->
    <string name="submit">Submit Order</string>
    <string name="shipped_by">Shipped By</string>
    <string name="shipped_by_chosen_captain">Chosen Captain</string>
    <string name="delivery_time">Delivery time</string>
    <string name="enter_maximum_days">Enter maximum days</string>
    <string name="enter_receiver_name">Enter receiver name </string>
    <string name="enter_approximate_weight">Enter approximate weight</string>
    <string name="wassally_not_support_area">Wassally does\'nt support this area</string>
    <string name="receiver_name">Receiver name</string>
    <string name="receiver_phone_number">Receiver phone number</string>
    <string name="pickup_location">Pickup location</string>
    <string name="choose_pickup_location">Select pickup location</string>
    <string name="select_destination_location">Select destination location</string>
    <string name="destination_location">Destination location</string>
    <string name="sender_phone_number">Sender phone Number</string>
    <string name="enter_receiver_phone_number">Enter receiver phone number</string>
    <string name="enter_sender_phone_number">Enter sender phone number</string>
    <string name="note">Note(optional)</string>
    <string name="type_your_note_here">Type your note here</string>
    <string name="package_weight">Package weight</string>
    <string name="shipped_by_hint">Coming soon : you will be able to choose to deliver your package by another app user (the captain)</string>
    <string name="new_order">New Order</string>
    <string name="distance_error_message">Distance should be greater than 2 Km</string>

    <!--permission activity-->
    <string name="location_permission">Location permission</string>
    <string name="location_permission_headline">Wassally requires access to your location</string>
    <string name="location_permission_body">Enable location for a more accurate delivery experience</string>
    <string name="turn_on_location_services">Turn on location services</string>

    <!--map activity-->
    <string name="title_activity_new_order_with_map">NewOrderWithMapActivity</string>
    <string name="service_not_available">service not available ..check network connection</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">address found</string>

    <!--orderSummary activity-->
    <string name="salary">Salary</string>
    <string name="salary_hint">This delivery will cost you :</string>
    <string name="default_loading_message">Loading.. please wait</string>
    <string name="creating_order_loading_message">Creating new order..please wait</string>
    <string name="welcome_back">welcome back</string>
    <string name="welcome">welcome </string>
    <string name="no_internet_connection">No Internet connection!</string>
    <string name="oh_no">Oh no!</string>
    <string name="no_internet_found_check_your_connection">No Internet found. Check your connection or try again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_waiting_orders">you don\'t have any waiting orders</string>
    <string name="no_pending_orders">You don\'t have any pending orders</string>
    <string name="no_on_way_orders">You don\'t have on way orders</string>


</resources>
