<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".activity.PermissionActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:text="@string/location_permission"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/primary_text_light"
        android:textStyle="bold" />


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="5dp"
        app:cardCornerRadius="9dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/location_permission_headline"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/primary_text_light" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/location_permission_body"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@android:color/secondary_text_light" />

            <Button
                android:id="@+id/btn_granted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/turn_on_location_services"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>