<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_height"
            android:padding="@dimen/logo_padding"
            android:src="@drawable/logo_big_white" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/secondary_text_dark"
            app:hintTextAppearance="@style/AppTheme.TextFloatingLabelAppearance">

            <EditText
                android:id="@+id/sign_up_first_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/loginColorAccent"
                android:hint="@string/first_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/loginColorAccent"
                app:theme="@style/textInputStyle" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/secondary_text_dark"
            app:hintTextAppearance="@style/AppTheme.TextFloatingLabelAppearance">

            <EditText
                android:id="@+id/sign_up_last_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/loginColorAccent"
                android:hint="@string/last_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/loginColorAccent"
                app:theme="@style/textInputStyle" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/secondary_text_dark"
            app:hintTextAppearance="@style/AppTheme.TextFloatingLabelAppearance">

            <EditText
                android:id="@+id/sign_up_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/loginColorAccent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/loginColorAccent"
                app:theme="@style/textInputStyle" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/secondary_text_dark"
            app:hintTextAppearance="@style/AppTheme.TextFloatingLabelAppearance">

            <EditText
                android:id="@+id/sign_up_username_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/loginColorAccent"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/loginColorAccent"
                app:theme="@style/textInputStyle" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/secondary_text_dark"
            app:hintTextAppearance="@style/AppTheme.TextFloatingLabelAppearance">

            <EditText
                android:id="@+id/sign_up_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/loginColorAccent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/loginColorAccent"
                app:theme="@style/textInputStyle" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/secondary_text_dark"
            app:hintTextAppearance="@style/AppTheme.TextFloatingLabelAppearance">

            <EditText
                android:id="@+id/sign_up_phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/loginColorAccent"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="@color/loginColorAccent"
                app:theme="@style/textInputStyle" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/loginColorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="OR"
                android:textColor="@color/colorAccent" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/loginColorAccent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="18dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sign_uo_with_google"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/google_ic" />

            <ImageView
                android:id="@+id/sign_up_with_facebook"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/facebook_ic" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="10dp"
            android:text="@string/privacy_note"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@android:color/primary_text_dark" />

    </LinearLayout>

</ScrollView>